@@ -39,10 +39,9 @@ class !FILECLASS! < Sequel::Migration
 end
 MIGRATION
 
-SQ_MODEL_UP_MG = (<<-MIGRATION).gsub(/^ {6}/, '') unless defined?(SQ_MODEL_UP_MG)
+SQ_MODEL_UP_MG = (<<-MIGRATION).gsub(/^/, '    ') unless defined?(SQ_MODEL_UP_MG)
 create_table :!TABLE! do
   primary_key :id
-  # <type> <name>
   !FIELDS!
 end
 MIGRATION
@@ -57,7 +56,7 @@ def create_model_migration(migration_name, name, columns)
          :base => SQ_MIGRATION, :up => SQ_MODEL_UP_MG, :down => SQ_MODEL_DOWN_MG)
 end
 
-SQ_CHANGE_MG = (<<-MIGRATION).gsub(/^ {6}/, '') unless defined?(SQ_CHANGE_MG)
+SQ_CHANGE_MG = (<<-MIGRATION).gsub(/^/, '    ') unless defined?(SQ_CHANGE_MG)
 alter_table :!TABLE! do
   !COLUMNS!
 end
