@@ -13,6 +13,7 @@
 * Fixes an issue with trailing delimiters for index controller actions (i.e /posts/)
 * Fixes issue with sequel in admin gem
 * Fixes error_messages_for to use humanized attribute
+* Fixes indentation issues for orm generators
 
 == 0.9.10
 
